update EDT and HPO notebook

--- a/02_hpo.ipynb
+++ b/02_hpo.ipynb
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://can-wsp01p01.gdl.stglabs.ibm.com:8643/platform/rest/conductor/v1\n",
-      "https://can-wsp01p01.gdl.stglabs.ibm.com:55557/platform/rest/deeplearning/v1\n"
+      "https://p10a117.pbm.ihost.com:8643/platform/rest/conductor/v1\n",
+      "https://p10a117.pbm.ihost.com:9243/platform/rest/deeplearning/v1\n"
      ]
     }
    ],
@@ -48,9 +48,9 @@
     "\n",
     "protocol = 'https'\n",
     "\n",
-    "master_host = 'can-wsp01p01.gdl.stglabs.ibm.com'\n",
+    "master_host = 'p10a117.pbm.ihost.com'\n",
     "\n",
-    "dli_rest_port = '55557'\n",
+    "dli_rest_port = '9243'\n",
     "sc_rest_port = '8643'\n",
     "\n",
     "\n",
@@ -61,16 +61,14 @@
     "print (dl_rest_url)\n",
     "# User login details\n",
     "\n",
-    "wmla_user = 'Admin'\n",
-    "wmla_pwd = 'Admin'\n",
+    "wmla_user = 'id'\n",
+    "wmla_pwd = 'pwd'\n",
     "\n",
     "\n",
     "myauth = (wmla_user, wmla_pwd)\n",
     "\n",
     "# Spark instance group details\n",
-    "#sig_name = '**** ADD HERE ****'\n",
-    "#sigName = 'ClaimsDamageDetection-IG'\n",
-    "sigName = 'spark233'\n",
+    "sigName = 'b0p036a-dliauto'\n",
     "\n",
     "# REST call variables\n",
     "commonHeaders = {'Accept': 'application/json'}\n",
@@ -114,8 +112,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "getTuneStatusUrl: https://can-wsp01p01.gdl.stglabs.ibm.com:55557/platform/rest/deeplearning/v1/hypersearch\n",
-      "There is no hpo task been created\n"
+      "getTuneStatusUrl: https://p10a117.pbm.ihost.com:9243/platform/rest/deeplearning/v1/hypersearch\n",
+      "Hpo task: b0p052aa-hpo-5380630135165402, State: FAILED\n",
+      "Hpo task: b0p052aa-hpo-5385332797413203, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-6056618011742928, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-6059288540719979, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-6059602449155012, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6060237740672447, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6060511715229259, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6062021439803581, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6126145272048604, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6126632704081853, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6126795548204361, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6131917238944766, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-6132240163171963, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6134136415189917, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-6137509396004738, State: FINISHED\n",
+      "Hpo task: b0p062ae-hpo-6149969004259192, State: FAILED\n",
+      "Hpo task: b0p062ae-hpo-6150301709699467, State: FINISHED\n",
+      "Hpo task: b0p062ae-hpo-6150581110844299, State: FINISHED\n",
+      "Hpo task: b0p062ae-hpo-6150806775509313, State: FINISHED\n",
+      "Hpo task: b0p062ae-hpo-6155230303644887, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-254313202512616, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-254758923243594, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-266345130757669, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-267216444279712, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-283482489191526, State: FAILED\n",
+      "Hpo task: b0p062ad-hpo-333075323673344, State: FAILED\n",
+      "Hpo task: b0p062ae-hpo-334226917216368, State: FINISHED\n",
+      "Hpo task: b0p062ae-hpo-334262065093836, State: FAILED\n",
+      "Hpo task: b0p062ae-hpo-334600686432731, State: FAILED\n",
+      "Hpo task: b0p062ad-hpo-334958704333562, State: FAILED\n",
+      "Hpo task: b0p062ae-hpo-335251368053981, State: FAILED\n",
+      "Hpo task: b0p062ae-hpo-335341996786732, State: FAILED\n",
+      "Hpo task: b0p062ae-hpo-335644157366388, State: FINISHED\n",
+      "Hpo task: b0p062ad-hpo-335962047943255, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-403697921838806, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-404372545448297, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-404624765236135, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-405300918575393, State: FAILED\n",
+      "Hpo task: kelvinl-hpo-405544795318004, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-406348140701279, State: FINISHED\n"
      ]
     }
    ],
@@ -271,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " tempFile: /tmp/tmp93dlyqfv.modelDir.tar\n"
+      " tempFile: /tmp/tmppzj0aux3.modelDir.tar\n"
      ]
     }
    ],
@@ -284,7 +321,7 @@
     "        tar.add(source_dir, arcname=os.path.basename(source_dir))\n",
     "MODEL_DIR_SUFFIX = \".modelDir.tar\"\n",
     "tempFile = tempfile.mktemp(MODEL_DIR_SUFFIX)\n",
-    "make_tarfile(tempFile, '/shared/zhuangxy/hpo_tutorial/new/pytorch_hpo')\n",
+    "make_tarfile(tempFile, '/gpfs/software/wmla-p10a117/dli_data_fs/models/pytorch_hpo')\n",
     "print(\" tempFile: \" + tempFile)\n",
     "files = {'file': open(tempFile, 'rb')}"
    ]
@@ -337,7 +374,7 @@
     "            # Max running time of the hpo task in minutes, -1 means unlimited\n",
     "            'maxRunTime': 60,  \n",
     "            # Max number of training job to submitted for hpo task, -1 means unlimited’,\n",
-    "            'maxJobNum': 10,            \n",
+    "            'maxJobNum': 4,            \n",
     "            # Max number of training job to run in parallel, default 1. It depends on both the\n",
     "            # avaiable resource and if the search algorithm support to run in parallel, current only Random\n",
     "            # fully supports to run in parallel, Hyperband and Tpe supports to to in parellel in some phase,\n",
@@ -403,7 +440,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Model submitted successfully: Admin-hpo-1764989354582692\n"
+      "Model submitted successfully: kelvinl-hpo-410153859499985\n"
      ]
     }
    ],
@@ -428,53 +465,193 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hpo task Admin-hpo-1764989354582692 completes with state FINISHED\n",
+      "Hpo task kelvinl-hpo-410153859499985 state SUBMITTED progress 0%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "Experiement kelvinl-410156202978861-879625756 state: RUNNING\n",
+      "Experiement kelvinl-410163463592585-49661814 state: RUNNING\n",
+      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 0/4%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "Experiement kelvinl-410156202978861-879625756 state: RUNNING\n",
+      "Experiement kelvinl-410163463592585-49661814 state: RUNNING\n",
+      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 0/4%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "Experiement kelvinl-410156202978861-879625756 state: RUNNING\n",
+      "Experiement kelvinl-410163463592585-49661814 state: RUNNING\n",
+      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 0/4%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "appID: kelvinl-410484519990849-1087957705,\n",
+      "count: 2\n",
+      "appID: kelvinl-410491607919120-1270438530,\n",
+      "count: 3\n",
+      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
+      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
+      "Experiement kelvinl-410484519990849-1087957705 state: RUNNING\n",
+      "Experiement kelvinl-410491607919120-1270438530 state: RUNNING\n",
+      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "appID: kelvinl-410484519990849-1087957705,\n",
+      "count: 2\n",
+      "appID: kelvinl-410491607919120-1270438530,\n",
+      "count: 3\n",
+      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
+      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
+      "Experiement kelvinl-410484519990849-1087957705 state: RUNNING\n",
+      "Experiement kelvinl-410491607919120-1270438530 state: RUNNING\n",
+      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "appID: kelvinl-410484519990849-1087957705,\n",
+      "count: 2\n",
+      "appID: kelvinl-410491607919120-1270438530,\n",
+      "count: 3\n",
+      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
+      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
+      "Experiement kelvinl-410484519990849-1087957705 state: RUNNING\n",
+      "Experiement kelvinl-410491607919120-1270438530 state: RUNNING\n",
+      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "appID: kelvinl-410484519990849-1087957705,\n",
+      "count: 2\n",
+      "appID: kelvinl-410491607919120-1270438530,\n",
+      "count: 3\n",
+      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
+      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
+      "Experiement kelvinl-410484519990849-1087957705 state: FINISHED\n",
+      "Experiement kelvinl-410491607919120-1270438530 state: FINISHED\n",
+      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
+      "appID: kelvinl-410156202978861-879625756,\n",
+      "count: 0\n",
+      "appID: kelvinl-410163463592585-49661814,\n",
+      "count: 1\n",
+      "appID: kelvinl-410484519990849-1087957705,\n",
+      "count: 2\n",
+      "appID: kelvinl-410491607919120-1270438530,\n",
+      "count: 3\n",
+      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
+      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
+      "Experiement kelvinl-410484519990849-1087957705 state: FINISHED\n",
+      "Experiement kelvinl-410491607919120-1270438530 state: FINISHED\n",
+      "Hpo task kelvinl-hpo-410153859499985 completes with state FINISHED\n",
       "{\n",
       "    \"best\": {\n",
-      "        \"appId\": \"Admin-1764990778397900-452489776\",\n",
-      "        \"driverId\": \"driver-20200514030204-0007-651c50d7-7ee3-45d2-b0c8-301e4ccfdb6a\",\n",
-      "        \"endTime\": \"2020-05-14 03:04:10\",\n",
+      "        \"appId\": \"kelvinl-410163463592585-49661814\",\n",
+      "        \"driverId\": \"driver-20200521135938-0045-c7948f63-3e6e-4ffb-8942-7b1a95e19c49\",\n",
+      "        \"endTime\": \"2020-05-21 14:04:55\",\n",
       "        \"hyperParams\": [\n",
       "            {\n",
       "                \"dataType\": \"double\",\n",
-      "                \"fixedVal\": \"0.07166439912774376\",\n",
+      "                \"fixedVal\": \"0.09412472970153422\",\n",
       "                \"name\": \"learning_rate\",\n",
       "                \"userDefined\": false\n",
       "            }\n",
       "        ],\n",
-      "        \"id\": 0,\n",
+      "        \"id\": 1,\n",
       "        \"maxiteration\": 0,\n",
-      "        \"metricVal\": 0.05732907333374023,\n",
-      "        \"startTime\": \"2020-05-14 03:02:04\",\n",
+      "        \"metricVal\": 0.041530884742736814,\n",
+      "        \"startTime\": \"2020-05-21 13:59:38\",\n",
       "        \"state\": \"FINISHED\"\n",
       "    },\n",
-      "    \"complete\": 1,\n",
-      "    \"createtime\": \"2020-05-14 03:02:01\",\n",
-      "    \"creator\": \"Admin\",\n",
-      "    \"duration\": \"00:01:00\",\n",
+      "    \"complete\": 4,\n",
+      "    \"createtime\": \"2020-05-21 13:59:27\",\n",
+      "    \"creator\": \"kelvinl\",\n",
+      "    \"duration\": \"00:10:57\",\n",
       "    \"experiments\": [\n",
       "        {\n",
-      "            \"appId\": \"Admin-1764990778397900-452489776\",\n",
-      "            \"driverId\": \"driver-20200514030204-0007-651c50d7-7ee3-45d2-b0c8-301e4ccfdb6a\",\n",
-      "            \"endTime\": \"2020-05-14 03:04:10\",\n",
+      "            \"appId\": \"kelvinl-410156202978861-879625756\",\n",
+      "            \"driverId\": \"driver-20200521135931-0044-7176968d-f5f1-4e7a-b7e5-136793608c86\",\n",
+      "            \"endTime\": \"2020-05-21 14:04:56\",\n",
       "            \"hyperParams\": [\n",
       "                {\n",
       "                    \"dataType\": \"double\",\n",
-      "                    \"fixedVal\": \"0.07166439912774376\",\n",
+      "                    \"fixedVal\": \"0.024336631632574286\",\n",
       "                    \"name\": \"learning_rate\",\n",
       "                    \"userDefined\": false\n",
       "                }\n",
       "            ],\n",
       "            \"id\": 0,\n",
       "            \"maxiteration\": 0,\n",
-      "            \"metricVal\": 0.05732907333374023,\n",
-      "            \"startTime\": \"2020-05-14 03:02:04\",\n",
+      "            \"metricVal\": 0.08576882705688477,\n",
+      "            \"startTime\": \"2020-05-21 13:59:31\",\n",
+      "            \"state\": \"FINISHED\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"appId\": \"kelvinl-410163463592585-49661814\",\n",
+      "            \"driverId\": \"driver-20200521135938-0045-c7948f63-3e6e-4ffb-8942-7b1a95e19c49\",\n",
+      "            \"endTime\": \"2020-05-21 14:04:55\",\n",
+      "            \"hyperParams\": [\n",
+      "                {\n",
+      "                    \"dataType\": \"double\",\n",
+      "                    \"fixedVal\": \"0.09412472970153422\",\n",
+      "                    \"name\": \"learning_rate\",\n",
+      "                    \"userDefined\": false\n",
+      "                }\n",
+      "            ],\n",
+      "            \"id\": 1,\n",
+      "            \"maxiteration\": 0,\n",
+      "            \"metricVal\": 0.041530884742736814,\n",
+      "            \"startTime\": \"2020-05-21 13:59:38\",\n",
+      "            \"state\": \"FINISHED\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"appId\": \"kelvinl-410484519990849-1087957705\",\n",
+      "            \"driverId\": \"driver-20200521140459-0046-4ec3889a-62db-4194-95c2-31d0c0b52334\",\n",
+      "            \"endTime\": \"2020-05-21 14:10:24\",\n",
+      "            \"hyperParams\": [\n",
+      "                {\n",
+      "                    \"dataType\": \"double\",\n",
+      "                    \"fixedVal\": \"0.006133259373493933\",\n",
+      "                    \"name\": \"learning_rate\",\n",
+      "                    \"userDefined\": false\n",
+      "                }\n",
+      "            ],\n",
+      "            \"id\": 2,\n",
+      "            \"maxiteration\": 0,\n",
+      "            \"metricVal\": 0.19974126739501954,\n",
+      "            \"startTime\": \"2020-05-21 14:04:59\",\n",
+      "            \"state\": \"FINISHED\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"appId\": \"kelvinl-410491607919120-1270438530\",\n",
+      "            \"driverId\": \"driver-20200521140506-0047-116871b8-bb4b-402a-9ec2-8eef4a153e64\",\n",
+      "            \"endTime\": \"2020-05-21 14:10:23\",\n",
+      "            \"hyperParams\": [\n",
+      "                {\n",
+      "                    \"dataType\": \"double\",\n",
+      "                    \"fixedVal\": \"0.021325392539064694\",\n",
+      "                    \"name\": \"learning_rate\",\n",
+      "                    \"userDefined\": false\n",
+      "                }\n",
+      "            ],\n",
+      "            \"id\": 3,\n",
+      "            \"maxiteration\": 0,\n",
+      "            \"metricVal\": 0.09405378570556641,\n",
+      "            \"startTime\": \"2020-05-21 14:05:07\",\n",
       "            \"state\": \"FINISHED\"\n",
       "        }\n",
       "    ],\n",
       "    \"failed\": 0,\n",
-      "    \"hpoName\": \"Admin-hpo-1764989354582692\",\n",
-      "    \"progress\": \"1/1\",\n",
+      "    \"hpoName\": \"kelvinl-hpo-410153859499985\",\n",
+      "    \"progress\": \"4/4\",\n",
       "    \"running\": 0,\n",
       "    \"state\": \"FINISHED\"\n",
       "}\n"
@@ -486,7 +663,7 @@
     "\n",
     "getHpoUrl = dl_rest_url +'/hypersearch/'+ hpoName\n",
     "\n",
-    "res = req.get(getHpoUrl, headers=commonHeaders, verify=False, auth=('Admin', 'Admin'))\n",
+    "res = req.get(getHpoUrl, headers=commonHeaders, verify=False, auth=myauth)\n",
     "if not res.ok:\n",
     "    print('get hpo task failed: code=%s, %s'%(res.status_code, res.content))\n",
     "else:\n",
@@ -495,7 +672,7 @@
     "    while json_out['state'] in ['SUBMITTED','RUNNING']:\n",
     "        print('Hpo task %s state %s progress %s%%'%(hpoName, json_out['state'], json_out['progress']))\n",
     "        time.sleep(90)\n",
-    "        res = req.get(getHpoUrl, headers=commonHeaders, verify=False, auth=('Admin', 'Admin'))\n",
+    "        res = req.get(getHpoUrl, headers=commonHeaders, verify=False, auth=myauth)\n",
     "        json_out=res.json()\n",
     "        \n",
     "        experiments_length = len(json_out['experiments'])\n",
@@ -540,6 +717,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -558,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
