remove id/pwd from notebook

--- a/03_edt.ipynb
+++ b/03_edt.ipynb
@@ -288,8 +288,8 @@
     "dl_rest_url = 'https://'+master_host+':'+dli_rest_port+'/platform/rest/deeplearning/v1'\n",
     "\n",
     "# User login details\n",
-    "wmla_user = 'kelvinl'\n",
-    "wmla_pwd = 'pwKelvin'\n",
+    "wmla_user = 'id'\n",
+    "wmla_pwd = 'pwd'\n",
     "\n",
     "\n",
     "\n",
