adding utilities to utils dir for UI project

--- a/02_hpo.ipynb
+++ b/02_hpo.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Common Setup"
    ]
@@ -13,7 +11,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "hidden": true
+    "ExecuteTime": {
+     "end_time": "2020-05-22T14:31:30.387177Z",
+     "start_time": "2020-05-22T14:31:29.910912Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -31,7 +32,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T14:32:31.352355Z",
+     "start_time": "2020-05-22T14:32:31.344835Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -61,8 +67,8 @@
     "print (dl_rest_url)\n",
     "# User login details\n",
     "\n",
-    "wmla_user = 'id'\n",
-    "wmla_pwd = 'pwd'\n",
+    "wmla_user = 'vanstee'\n",
+    "wmla_pwd = 'pwvanstee'\n",
     "\n",
     "\n",
     "myauth = (wmla_user, wmla_pwd)\n",
@@ -106,53 +112,29 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T14:33:05.986759Z",
+     "start_time": "2020-05-22T14:33:05.783411Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "getTuneStatusUrl: https://p10a117.pbm.ihost.com:9243/platform/rest/deeplearning/v1/hypersearch\n",
-      "Hpo task: b0p052aa-hpo-5380630135165402, State: FAILED\n",
-      "Hpo task: b0p052aa-hpo-5385332797413203, State: FAILED\n",
-      "Hpo task: kelvinl-hpo-6056618011742928, State: FAILED\n",
-      "Hpo task: kelvinl-hpo-6059288540719979, State: FAILED\n",
-      "Hpo task: kelvinl-hpo-6059602449155012, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6060237740672447, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6060511715229259, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6062021439803581, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6126145272048604, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6126632704081853, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6126795548204361, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6131917238944766, State: FAILED\n",
-      "Hpo task: kelvinl-hpo-6132240163171963, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6134136415189917, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-6137509396004738, State: FINISHED\n",
-      "Hpo task: b0p062ae-hpo-6149969004259192, State: FAILED\n",
-      "Hpo task: b0p062ae-hpo-6150301709699467, State: FINISHED\n",
-      "Hpo task: b0p062ae-hpo-6150581110844299, State: FINISHED\n",
-      "Hpo task: b0p062ae-hpo-6150806775509313, State: FINISHED\n",
-      "Hpo task: b0p062ae-hpo-6155230303644887, State: FINISHED\n",
       "Hpo task: kelvinl-hpo-254313202512616, State: FINISHED\n",
       "Hpo task: kelvinl-hpo-254758923243594, State: FINISHED\n",
       "Hpo task: kelvinl-hpo-266345130757669, State: FAILED\n",
       "Hpo task: kelvinl-hpo-267216444279712, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-283482489191526, State: FAILED\n",
-      "Hpo task: b0p062ad-hpo-333075323673344, State: FAILED\n",
-      "Hpo task: b0p062ae-hpo-334226917216368, State: FINISHED\n",
-      "Hpo task: b0p062ae-hpo-334262065093836, State: FAILED\n",
-      "Hpo task: b0p062ae-hpo-334600686432731, State: FAILED\n",
-      "Hpo task: b0p062ad-hpo-334958704333562, State: FAILED\n",
-      "Hpo task: b0p062ae-hpo-335251368053981, State: FAILED\n",
-      "Hpo task: b0p062ae-hpo-335341996786732, State: FAILED\n",
-      "Hpo task: b0p062ae-hpo-335644157366388, State: FINISHED\n",
-      "Hpo task: b0p062ad-hpo-335962047943255, State: FAILED\n",
       "Hpo task: kelvinl-hpo-403697921838806, State: FAILED\n",
       "Hpo task: kelvinl-hpo-404372545448297, State: FAILED\n",
       "Hpo task: kelvinl-hpo-404624765236135, State: FAILED\n",
       "Hpo task: kelvinl-hpo-405300918575393, State: FAILED\n",
       "Hpo task: kelvinl-hpo-405544795318004, State: FINISHED\n",
-      "Hpo task: kelvinl-hpo-406348140701279, State: FINISHED\n"
+      "Hpo task: kelvinl-hpo-406348140701279, State: FINISHED\n",
+      "Hpo task: kelvinl-hpo-410153859499985, State: FINISHED\n"
      ]
     }
    ],
@@ -175,23 +157,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Launch a HPO task"
+    "### Launch a HPO task\n",
+    "\n",
+    "TODO : Explain the high level ..\n",
+    "train mnist using WMLA HPO through API ... "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Model file update to Run HPO"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Model changes required from 2 perspective:\n",
     "- Inject hyper-parameters for the sub-training during search\n",
@@ -200,19 +181,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "##### Model update part 1 - Inject hyper-parameters"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The hyper-parameters will be supplied in a file called **config.json** with JSON format,located in the current working directory and can be read direcly as the following example snippet.\n",
     "\n",
@@ -226,19 +202,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "##### Model update part 2 - Retrieve sub-training result metric"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "At the end of your training run, your code will need to create a file called **val_dict_list.json** with test metrics generated during training. These metrics will be used by the search algorithm to propose new sets of hyper-parameters. Please note that **val_dict_list.json** should be created under the result directory which can be retrieved through the environment variable **RESULT_DIR**.\n",
     "\n",
@@ -296,19 +267,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Package the updated model files into a tar file ending with `.modelDir.tar`"
+    "Package the updated model files into a tar file ending with `.modelDir.tar`\n",
+    "\n",
+    "REST API expects a modelDir.tar with the model code inside ..\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T14:48:03.132330Z",
+     "start_time": "2020-05-22T14:48:03.121855Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " tempFile: /tmp/tmppzj0aux3.modelDir.tar\n"
+      " tempFile: /tmp/tmp13240_og.modelDir.tar\n"
      ]
     }
    ],
@@ -342,8 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T14:48:05.655197Z",
+     "start_time": "2020-05-22T14:48:05.642751Z"
+    }
+   },
    "outputs": [],
    "source": [
     "data =  {\n",
@@ -432,15 +415,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T14:48:07.857438Z",
+     "start_time": "2020-05-22T14:48:07.727248Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Model submitted successfully: kelvinl-hpo-410153859499985\n"
+      "Model submitted successfully: vanstee-hpo-485074186466936\n"
      ]
     }
    ],
@@ -458,206 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hpo task kelvinl-hpo-410153859499985 state SUBMITTED progress 0%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "Experiement kelvinl-410156202978861-879625756 state: RUNNING\n",
-      "Experiement kelvinl-410163463592585-49661814 state: RUNNING\n",
-      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 0/4%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "Experiement kelvinl-410156202978861-879625756 state: RUNNING\n",
-      "Experiement kelvinl-410163463592585-49661814 state: RUNNING\n",
-      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 0/4%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "Experiement kelvinl-410156202978861-879625756 state: RUNNING\n",
-      "Experiement kelvinl-410163463592585-49661814 state: RUNNING\n",
-      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 0/4%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "appID: kelvinl-410484519990849-1087957705,\n",
-      "count: 2\n",
-      "appID: kelvinl-410491607919120-1270438530,\n",
-      "count: 3\n",
-      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
-      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
-      "Experiement kelvinl-410484519990849-1087957705 state: RUNNING\n",
-      "Experiement kelvinl-410491607919120-1270438530 state: RUNNING\n",
-      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "appID: kelvinl-410484519990849-1087957705,\n",
-      "count: 2\n",
-      "appID: kelvinl-410491607919120-1270438530,\n",
-      "count: 3\n",
-      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
-      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
-      "Experiement kelvinl-410484519990849-1087957705 state: RUNNING\n",
-      "Experiement kelvinl-410491607919120-1270438530 state: RUNNING\n",
-      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "appID: kelvinl-410484519990849-1087957705,\n",
-      "count: 2\n",
-      "appID: kelvinl-410491607919120-1270438530,\n",
-      "count: 3\n",
-      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
-      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
-      "Experiement kelvinl-410484519990849-1087957705 state: RUNNING\n",
-      "Experiement kelvinl-410491607919120-1270438530 state: RUNNING\n",
-      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "appID: kelvinl-410484519990849-1087957705,\n",
-      "count: 2\n",
-      "appID: kelvinl-410491607919120-1270438530,\n",
-      "count: 3\n",
-      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
-      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
-      "Experiement kelvinl-410484519990849-1087957705 state: FINISHED\n",
-      "Experiement kelvinl-410491607919120-1270438530 state: FINISHED\n",
-      "Hpo task kelvinl-hpo-410153859499985 state RUNNING progress 2/4%\n",
-      "appID: kelvinl-410156202978861-879625756,\n",
-      "count: 0\n",
-      "appID: kelvinl-410163463592585-49661814,\n",
-      "count: 1\n",
-      "appID: kelvinl-410484519990849-1087957705,\n",
-      "count: 2\n",
-      "appID: kelvinl-410491607919120-1270438530,\n",
-      "count: 3\n",
-      "Experiement kelvinl-410156202978861-879625756 state: FINISHED\n",
-      "Experiement kelvinl-410163463592585-49661814 state: FINISHED\n",
-      "Experiement kelvinl-410484519990849-1087957705 state: FINISHED\n",
-      "Experiement kelvinl-410491607919120-1270438530 state: FINISHED\n",
-      "Hpo task kelvinl-hpo-410153859499985 completes with state FINISHED\n",
-      "{\n",
-      "    \"best\": {\n",
-      "        \"appId\": \"kelvinl-410163463592585-49661814\",\n",
-      "        \"driverId\": \"driver-20200521135938-0045-c7948f63-3e6e-4ffb-8942-7b1a95e19c49\",\n",
-      "        \"endTime\": \"2020-05-21 14:04:55\",\n",
-      "        \"hyperParams\": [\n",
-      "            {\n",
-      "                \"dataType\": \"double\",\n",
-      "                \"fixedVal\": \"0.09412472970153422\",\n",
-      "                \"name\": \"learning_rate\",\n",
-      "                \"userDefined\": false\n",
-      "            }\n",
-      "        ],\n",
-      "        \"id\": 1,\n",
-      "        \"maxiteration\": 0,\n",
-      "        \"metricVal\": 0.041530884742736814,\n",
-      "        \"startTime\": \"2020-05-21 13:59:38\",\n",
-      "        \"state\": \"FINISHED\"\n",
-      "    },\n",
-      "    \"complete\": 4,\n",
-      "    \"createtime\": \"2020-05-21 13:59:27\",\n",
-      "    \"creator\": \"kelvinl\",\n",
-      "    \"duration\": \"00:10:57\",\n",
-      "    \"experiments\": [\n",
-      "        {\n",
-      "            \"appId\": \"kelvinl-410156202978861-879625756\",\n",
-      "            \"driverId\": \"driver-20200521135931-0044-7176968d-f5f1-4e7a-b7e5-136793608c86\",\n",
-      "            \"endTime\": \"2020-05-21 14:04:56\",\n",
-      "            \"hyperParams\": [\n",
-      "                {\n",
-      "                    \"dataType\": \"double\",\n",
-      "                    \"fixedVal\": \"0.024336631632574286\",\n",
-      "                    \"name\": \"learning_rate\",\n",
-      "                    \"userDefined\": false\n",
-      "                }\n",
-      "            ],\n",
-      "            \"id\": 0,\n",
-      "            \"maxiteration\": 0,\n",
-      "            \"metricVal\": 0.08576882705688477,\n",
-      "            \"startTime\": \"2020-05-21 13:59:31\",\n",
-      "            \"state\": \"FINISHED\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"appId\": \"kelvinl-410163463592585-49661814\",\n",
-      "            \"driverId\": \"driver-20200521135938-0045-c7948f63-3e6e-4ffb-8942-7b1a95e19c49\",\n",
-      "            \"endTime\": \"2020-05-21 14:04:55\",\n",
-      "            \"hyperParams\": [\n",
-      "                {\n",
-      "                    \"dataType\": \"double\",\n",
-      "                    \"fixedVal\": \"0.09412472970153422\",\n",
-      "                    \"name\": \"learning_rate\",\n",
-      "                    \"userDefined\": false\n",
-      "                }\n",
-      "            ],\n",
-      "            \"id\": 1,\n",
-      "            \"maxiteration\": 0,\n",
-      "            \"metricVal\": 0.041530884742736814,\n",
-      "            \"startTime\": \"2020-05-21 13:59:38\",\n",
-      "            \"state\": \"FINISHED\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"appId\": \"kelvinl-410484519990849-1087957705\",\n",
-      "            \"driverId\": \"driver-20200521140459-0046-4ec3889a-62db-4194-95c2-31d0c0b52334\",\n",
-      "            \"endTime\": \"2020-05-21 14:10:24\",\n",
-      "            \"hyperParams\": [\n",
-      "                {\n",
-      "                    \"dataType\": \"double\",\n",
-      "                    \"fixedVal\": \"0.006133259373493933\",\n",
-      "                    \"name\": \"learning_rate\",\n",
-      "                    \"userDefined\": false\n",
-      "                }\n",
-      "            ],\n",
-      "            \"id\": 2,\n",
-      "            \"maxiteration\": 0,\n",
-      "            \"metricVal\": 0.19974126739501954,\n",
-      "            \"startTime\": \"2020-05-21 14:04:59\",\n",
-      "            \"state\": \"FINISHED\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"appId\": \"kelvinl-410491607919120-1270438530\",\n",
-      "            \"driverId\": \"driver-20200521140506-0047-116871b8-bb4b-402a-9ec2-8eef4a153e64\",\n",
-      "            \"endTime\": \"2020-05-21 14:10:23\",\n",
-      "            \"hyperParams\": [\n",
-      "                {\n",
-      "                    \"dataType\": \"double\",\n",
-      "                    \"fixedVal\": \"0.021325392539064694\",\n",
-      "                    \"name\": \"learning_rate\",\n",
-      "                    \"userDefined\": false\n",
-      "                }\n",
-      "            ],\n",
-      "            \"id\": 3,\n",
-      "            \"maxiteration\": 0,\n",
-      "            \"metricVal\": 0.09405378570556641,\n",
-      "            \"startTime\": \"2020-05-21 14:05:07\",\n",
-      "            \"state\": \"FINISHED\"\n",
-      "        }\n",
-      "    ],\n",
-      "    \"failed\": 0,\n",
-      "    \"hpoName\": \"kelvinl-hpo-410153859499985\",\n",
-      "    \"progress\": \"4/4\",\n",
-      "    \"running\": 0,\n",
-      "    \"state\": \"FINISHED\"\n",
-      "}\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T14:58:56.801359Z",
+     "start_time": "2020-05-22T14:56:43.829Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -670,8 +466,9 @@
     "    json_out=res.json()\n",
     "    \n",
     "    while json_out['state'] in ['SUBMITTED','RUNNING']:\n",
+    "        IPython.display.clear_output()¶\n",
     "        print('Hpo task %s state %s progress %s%%'%(hpoName, json_out['state'], json_out['progress']))\n",
-    "        time.sleep(90)\n",
+    "        time.sleep(1)\n",
     "        res = req.get(getHpoUrl, headers=commonHeaders, verify=False, auth=myauth)\n",
     "        json_out=res.json()\n",
     "        \n",
@@ -742,7 +539,54 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "382.2px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
